# ghostfolio-agent

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  PRD.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: no-unused-dependencies.mdc  prd-protection.mdc
.github/workflows/: ci.yml
app/: __init__.py  agent.py  config.py  ghostfolio_client.py  llm.py  main.py  mock_data.py  observability.py  schemas.py  telemetry.py  tool_defs.py  tools.py
app/data_sources/: __init__.py  base.py  ghostfolio_api_provider.py  mock_provider.py
docs/: architecture.md  cost_analysis.md
evals/: eval_dataset.json  llm_judge.py  run_evals.py
scripts/: gh_server.sh  start.sh
tests/: test_agent.py  test_app.py  test_data_sources.py  test_ghostfolio_api_provider.py  test_ghostfolio_client.py  test_llm_agent.py  test_p0_agent.py  test_telemetry.py
tests/fixtures/: portfolio_snapshots.py  transactions.py
ui/: streamlit_app.py
