[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostfolio-agent"
version = "0.1.0"
description = "P0 Ghostfolio conversational finance agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "langgraph>=0.6.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "uvicorn>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
